# Projeto-TEA-Databricks

./: .env  .gitignore  pyproject.toml  readme.md  setup.py
dataviz/: README.md  streamlit_app.py
pipeline_pcd/bronze/: cbo_dicionario.sql  rais.sql  rais_dicionario.sql
pipeline_pcd/gold/: kpis_tea_formal.sql
pipeline_pcd/silver/: rais_vinculos.sql
